--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     	<h4 style="color:#99C96A;">Friend</h4>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h4 style="color:#20CFB4;">Soham</h4>
+    	<h4 style="color:#20CFB4;">Nghi :)</h4>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -103,42 +103,42 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>..and travelling daily to Hadapsar :)</p>
-				<p>I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday</p>
+				<p>Ngày hôm nay...</p>
+				<p>cũng đẹp như bao ngày khác</p>
+				<p>và mình nhận ra...</p>
+				<p>một năm đã trôi qua</p>
+				<p>chỉ như cái chớp mắt</p>
+				<p><strong>tuy nhiên</strong></p>
+				<p>bạn có biết...?</p>
+				<p>hôm nay là một ngày</p>
+				<p>thật đặc biệt với bạn</p>
+				<p>vậy nên là</p>
+				<p>tui muốn tặng bạn</p>
+				<p>một món quà tuyệt vời</p>
+				<p>hãy để tui chia sẻ...</p>
+				<p>hạnh phúc này với bạn</p>
+				<p>cảm ơn vì đã ở đây</p>
+				<p>cảm ơn vì tình bạn...</p>
+				<p>tuy ngắn nhưng thật tuyệt vời này</p>
+				<p>chúc bạn những điều tốt đẹp nhất</p>
+				<p>có một cuộc sống thoải mái hơn</p>
+				<p>những điều tốt đẹp sẽ luôn đến với bạn</p>
+				<p>hãy nhớ về...</p>
+				<p>những khát khao của bà</p>
+				<p>tương lai sẽ luôn rộng mở</p>
+				<p>như bầu trời xanh to lớn</p>
+				<p>chào đón bạn mỗi ngày</p>
+				<p>mình mong rằng</p>
+				<p>bạn sẽ tìm được...</p>
+				<p>hạnh phúc mỗi ngày :)</p>
+				<p>luôn ko ngừng cố gắng,</p>
+				<p>tận hưởng từng khoảng khắc...</p>
+				<p>đã và đang đến với bạn</p>
+				<p>cùng nụ cười đẹp nhất của bạn</p>
+				<p>và biến nó thành kỷ niệm đẹp nhất</p>
+				<p>cuối cùng...</p>
+				<p>mình muốn chúc bạn một lần nữa</p>
+				<p>chúc bạn sinh nhật hạnh phúc :)</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -151,7 +151,7 @@
 					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">A mesage for you :)</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
