--- a/index.html
+++ b/index.html
@@ -109,36 +109,36 @@
 				<p>một năm đã trôi qua</p>
 				<p>chỉ như cái chớp mắt</p>
 				<p><strong>tuy nhiên</strong></p>
-				<p>bạn có biết...?</p>
+				<p>Nghi có biết...?</p>
 				<p>hôm nay là một ngày</p>
 				<p>thật đặc biệt với bạn</p>
 				<p>vậy nên là</p>
 				<p>tui muốn tặng bạn</p>
 				<p>một món quà tuyệt vời</p>
 				<p>hãy để tui chia sẻ...</p>
-				<p>hạnh phúc này với bạn</p>
+				<p>hạnh phúc này với bà</p>
 				<p>cảm ơn vì đã ở đây</p>
 				<p>cảm ơn vì tình bạn...</p>
 				<p>tuy ngắn nhưng thật tuyệt vời này</p>
-				<p>chúc bạn những điều tốt đẹp nhất</p>
+				<p>chúc Nghi những điều tốt đẹp nhất</p>
 				<p>có một cuộc sống thoải mái hơn</p>
-				<p>những điều tốt đẹp sẽ luôn đến với bạn</p>
+				<p>những điều tốt đẹp sẽ luôn đến với bà</p>
 				<p>hãy nhớ về...</p>
-				<p>những khát khao của bà</p>
+				<p>những khát khao của mình</p>
 				<p>tương lai sẽ luôn rộng mở</p>
 				<p>như bầu trời xanh to lớn</p>
 				<p>chào đón bạn mỗi ngày</p>
 				<p>mình mong rằng</p>
-				<p>bạn sẽ tìm được...</p>
+				<p>Nghi sẽ tìm được...</p>
 				<p>hạnh phúc mỗi ngày :)</p>
 				<p>luôn ko ngừng cố gắng,</p>
 				<p>tận hưởng từng khoảng khắc...</p>
-				<p>đã và đang đến với bạn</p>
-				<p>cùng nụ cười đẹp nhất của bạn</p>
+				<p>đã và đang đến với Nghi</p>
+				<p>cùng nụ cười đẹp nhất của bà</p>
 				<p>và biến nó thành kỷ niệm đẹp nhất</p>
 				<p>cuối cùng...</p>
 				<p>mình muốn chúc bạn một lần nữa</p>
-				<p>chúc bạn sinh nhật hạnh phúc :)</p>
+				<p>chúc Nghi sinh nhật hạnh phúc :)</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
