--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 				<p><strong>tuy nhiên</strong></p>
 				<p>Nghi có biết...?</p>
 				<p>hôm nay là một ngày</p>
-				<p>thật đặc biệt với bạn</p>
+				<p>thật đặc biệt với bà</p>
 				<p>vậy nên là</p>
-				<p>tui muốn tặng bạn</p>
+				<p>tui muốn tặng Nghi</p>
 				<p>một món quà tuyệt vời</p>
 				<p>hãy để tui chia sẻ...</p>
 				<p>hạnh phúc này với bà</p>
@@ -127,14 +127,14 @@
 				<p>những khát khao của mình</p>
 				<p>tương lai sẽ luôn rộng mở</p>
 				<p>như bầu trời xanh to lớn</p>
-				<p>chào đón bạn mỗi ngày</p>
-				<p>mình mong rằng</p>
+				<p>chào đón bà mỗi ngày</p>
+				<p>tui mong rằng</p>
 				<p>Nghi sẽ tìm được...</p>
 				<p>hạnh phúc mỗi ngày :)</p>
 				<p>luôn ko ngừng cố gắng,</p>
 				<p>tận hưởng từng khoảng khắc...</p>
 				<p>đã và đang đến với Nghi</p>
-				<p>cùng nụ cười đẹp nhất của bà</p>
+				<p>bằng nụ cười đẹp nhất của bà</p>
 				<p>và biến nó thành kỷ niệm đẹp nhất</p>
 				<p>cuối cùng...</p>
 				<p>mình muốn chúc bạn một lần nữa</p>
